Change the pages folder to views folder

--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -9,10 +9,10 @@
 <body>
     <div id="navbar">
         <a href="index.html"><h1>Hápax</h1></a>
-        <a href="Pages/aboutUs.html"><p>About Us</p></a>
-        <a href="Pages/ourTequila.html"><p>Our Tequila</p></a>
-        <a href="Pages/process.html"><p>Process</p></a>
-        <a href="Pages/mixology.html"><p>Mixology</p></a>
+        <a href="views/aboutUs.html"><p>About Us</p></a>
+        <a href="views/ourTequila.html"><p>Our Tequila</p></a>
+        <a href="views/process.html"><p>Process</p></a>
+        <a href="views/mixology.html"><p>Mixology</p></a>
     </div>
     <div id="body">
         <p>body</p>
