Adding test text

--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -42,8 +42,57 @@
             </nav>
         </div>
         <div id="body">
-            <p>body</p>
+
+            <table>
+                <tr>
+                    <td>
+                        <img src="assets/Test-Img/logo.png" alt="Hápax Logo" id="hapaxLogo">
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <h1>TEQUILA 100% DE AGAVE</h1>
+                    </td>
+                </tr>
+            </table>
+
         </div>
+    </section>
+
+    <section id="info">
+        <table>
+            <tr>
+                <tr>
+                    <p>about</p>
+                </tr>
+                <tr>
+                    <p>
+                        Three amigos with one interest in common: good tequila. Tequila hecho en Tequila, Jalisco.
+                        ¡Te invitamos un tequila!
+                        #DrinkItWithHapax
+                    </p>
+                </tr>
+            </tr>
+        </table>
+        <hr>
+        <table>
+            <tr>
+                <td>
+                    <h3>service</h3>
+                </td>
+                <td>
+                    <h3>awards</h3>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>fashion weddingt test1 testgyfhfhfhfhf1 test1</p>
+                </td>
+                <td>
+                    <p>fashion222 weddingt test12222 test1222 222test1</p>
+                </td>
+            </tr>
+        </table>
     </section>
 
     <section id="testimonials">
