--- a/WebSite/index.html
+++ b/WebSite/index.html
@@ -139,7 +139,7 @@
             <div class="row">
                 <div class="col-lg-6 col-Features">
                     <div class="row">
-                        <img src="assets/Test-Img/img1.png" alt="img 1" style="width: 200px;">
+                        <img src="assets/Test-Img/img1.png" alt="img 1"  class="img1">
                     </div>
                     <div class="row">
                         <h3 class="feature-title">Water Story</h3>
@@ -147,7 +147,7 @@
                 </div>
                 <div class="col-lg-6 col-Features">
                     <div class="row">
-                        <img src="assets/Test-Img/img2.png" alt="img2" style="width: 100px; height: 50px;">
+                        <img src="assets/Test-Img/img2.png" alt="img2" class="img2">
                     </div>
                     <div class="row">
                         <h3 class="feature-title">Wild Life</h3>
